05_ponteiros/pont_12/Resultados/Raony/vetor/result_compilation.txt
Resultados/Raony/vetor/main.c: In function ‘main’:
Resultados/Raony/vetor/main.c:11:13: warning: passing argument 1 of ‘LeVetor’ from incompatible pointer type [-Wincompatible-pointer-types]
   11 |     LeVetor(&vetor);
      |             ^~~~~~
      |             |
      |             Vetor ** {aka struct vetor **}
In file included from Resultados/Raony/vetor/main.c:2:
Resultados/Raony/vetor/vetor.h:24:21: note: expected ‘Vetor *’ {aka ‘struct vetor *’} but argument is of type ‘Vetor **’ {aka ‘struct vetor **’}
   24 | void LeVetor(Vetor *vetor);
      |              ~~~~~~~^~~~~
Resultados/Raony/vetor/main.c:13:32: warning: passing argument 1 of ‘AplicarOperacaoVetor’ from incompatible pointer type [-Wincompatible-pointer-types]
   13 |     sum = AplicarOperacaoVetor(&vetor, soma);
      |                                ^~~~~~
      |                                |
      |                                Vetor ** {aka struct vetor **}
In file included from Resultados/Raony/vetor/main.c:2:
Resultados/Raony/vetor/vetor.h:33:33: note: expected ‘Vetor *’ {aka ‘struct vetor *’} but argument is of type ‘Vetor **’ {aka ‘struct vetor **’}
   33 | int AplicarOperacaoVetor(Vetor *vetor, Operation op);
      |                          ~~~~~~~^~~~~
Resultados/Raony/vetor/main.c:14:33: warning: passing argument 1 of ‘AplicarOperacaoVetor’ from incompatible pointer type [-Wincompatible-pointer-types]
   14 |     prod = AplicarOperacaoVetor(&vetor, produto);
      |                                 ^~~~~~
      |                                 |
      |                                 Vetor ** {aka struct vetor **}
In file included from Resultados/Raony/vetor/main.c:2:
Resultados/Raony/vetor/vetor.h:33:33: note: expected ‘Vetor *’ {aka ‘struct vetor *’} but argument is of type ‘Vetor **’ {aka ‘struct vetor **’}
   33 | int AplicarOperacaoVetor(Vetor *vetor, Operation op);
      |                          ~~~~~~~^~~~~
Resultados/Raony/vetor/main.c:17:29: error: ‘product’ undeclared (first use in this function); did you mean ‘produto’?
   17 |     printf("Produto: %d\n", product);
      |                             ^~~~~~~
      |                             produto
Resultados/Raony/vetor/main.c:17:29: note: each undeclared identifier is reported only once for each function it appears in
Resultados/Raony/vetor/main.c:10:18: warning: variable ‘prod’ set but not used [-Wunused-but-set-variable]
   10 |     int sum = 0, prod = 0;
      |                  ^~~~
